--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
-    "test": "jest"
+    "test": "jest",
+    "nuke-db": "node src/scripts/nukeDb.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
